tests/invalid/Old_Invalid_14.whiley
method copy(&int p, &int q)
ensures old(*p) == *p:
   *q = 1
